[package]
name = "rustpay"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
bincode = "1.3.3"
ecdsa = { version = "0.16.9", features = ["signing", "verifying"] }
p256 = { version = "0.13.2", features = ["serde"] }
pbkdf2 = "0.12.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rmp-serde = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
sha2 = "0.10.8"
